# hernan-portafolio

./: .gitignore  BACKEND_BRIEF.md  README.md  ROADMAP.md  audit_options.py  preview_diario.py  preview_noticia.py  preview_options.py  preview_reporte.py  preview_trade.py  render.yaml  webull_sandbox_check.py  wheat_swing_zw.py  wizards_bot.py  wizards_state.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  auth.py  cache.py  config.py  db.py  logging.py  main.py
backend/app/ai/: __init__.py  brain.py  idea_evaluator.py  tools.py
backend/app/ingestion/: __init__.py  baltic.py  base.py  capital_com.py  eodhd.py  fred.py  ism_pmi.py  polygon.py  positions_snapshot.py  runner.py  stooq.py  twelve_data.py  yfinance.py
backend/app/modeling/: __init__.py  data.py  feature_select.py  forecast.py  prediction.py  refit.py  regression.py  validation.py
backend/app/models/: __init__.py  holding.py  ingestion_run.py  model_fit.py  observation.py  portfolio.py  portfolio_snapshot.py  position.py  prediction.py  scenario.py  trading_run.py  user_account.py  variable.py
backend/app/portfolio/: __init__.py  backtest.py  optimizer.py  runner.py
backend/app/routers/: __init__.py  accounts.py  admin.py  chat.py  health.py  holdings.py  models.py  observations.py  portfolios.py  positions.py  predictions.py  scenarios.py  telegram.py  variables.py
backend/app/schemas/: __init__.py  account.py  holding.py  model.py  observation.py  portfolio.py  prediction.py  variable.py
backend/app/trading/: alpaca.py  model_bot.py  pelosi_bot.py  runner.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_holdings.py  (+7 more)
backend/scripts/: backfill_portfolio_history.py  fix_ftse_history.py  morning_run.sh  refit_all.py  run_ingestion.py  run_predictions.py  run_trading.py  seed_variables.py  snapshot_positions.py
backend/tests/: conftest.py  test_backtest.py  test_capital_com.py  test_eodhd_provider.py  test_fallback_chain.py  test_feature_select.py  test_forecast.py  test_fred_provider.py  test_polygon_provider.py  test_portfolio_optimizer.py  test_prediction.py  test_regression.py  test_scrape_providers.py  test_stooq_provider.py  test_transforms.py  test_twelve_data_provider.py  test_validation.py  test_yfinance_provider.py
(+153 files in other folders)
